github.css
a.cci{
	margin: -3px 8px 0 0;
}
	a.cci span.default-build-status{
		display: inline-block;
		border-radius: 50%;
		background-color: #DEDEDE;
		width: 12px;
		height: 12px;
		transition: background-color 2s;
	}
		a.cci span.default-build-status.passed{
			background-color: green;
		}
	
		a.cci span.default-build-status.failed{
			background-color: red;
		}
	
		a.cci span.default-build-status.error{
			background-color: black;
		}
	
		a.cci span.default-build-status.running{
			background-color: cyan;
		}

img.circleci-icon{
	width: 14px;
	height: 14px;
	vertical-align: text-top;
}

